--- a/assets/user/css/style.css
+++ b/assets/user/css/style.css
@@ -29204,6 +29204,15 @@ option {
   border-radius: 5px;
   cursor: pointer;
 }
+.investment_img{
+  border: 4px solid;
+  border-radius: 5px;
+}
+.radio_investment{
+  position: absolute;
+  top:0px;
+  right:0px;
+}
 /*-------------------------------------------------------------------*/
 /* === Layouts === */
 /*-------------------------------------------------------------------*/
