--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,14 +31,18 @@
   .section-title h2 {
     font-size: 36px;
     font-weight: 700;
-    color: #455164;
-    margin-bottom: 14px; }
+    color: #ffa100;
+    margin-bottom: 14px;
+    }
     .section-title h2 span {
-      color: #1add97; }
+      color: #f9a10b;
+      }
     .section-title h2.extra-margin {
       margin-bottom: 22px; }
   .section-title p {
-    font-size: 16px; }
+    font-size: 16px;
+    color: white;
+    }
 
 .c-white {
   color: #fff; }
@@ -485,7 +489,9 @@ ul {
   position: absolute;
   width: 100%;
   border-bottom: 1px solid rgba(250, 250, 250, 0.1);
-  z-index: 2; }
+  z-index: 2;
+  background: #0f0f0f;
+  }
   .header.nav-fixed {
     position: fixed;
     background: #1e3056;
@@ -520,7 +526,9 @@ ul {
             padding: 15px 20px;
             border-bottom: 1px solid rgba(107, 58, 219, 0.25);
             font-weight: 500;
-            color: #6a38da; }
+            color: white;
+            background: #0f0f0f;
+            }
             .header .main-menu .navbar .navbar-nav .nav-item .dropdown-menu .dropdown-item:last-child {
               border-bottom: none; }
             .header .main-menu .navbar .navbar-nav .nav-item .dropdown-menu .dropdown-item:hover {
@@ -554,11 +562,12 @@ ul {
     banner
 ==========================================*/
 .banner {
-  background: url("../img/banner-bg.png") center bottom no-repeat;
+  background: url("../img/banner-bg.png") center center no-repeat;
   background-size: cover;
-  padding: 307px 0 470px;
+  padding: 300px;
   width: 100%;
-  position: relative; }
+  position: relative;
+  }
   .banner .banner-content {
     text-align: center; }
     .banner .banner-content h1 {
@@ -598,7 +607,7 @@ ul {
     feature
 ==========================================*/
 .info-feature {
-  background: #312b2b;
+  background: #0f0f0f;
   padding: 120px 0;
   margin-top: -300px;
   }
@@ -707,10 +716,11 @@ ul {
     -o-transition: all 0.3s ease-in;
     transition: all 0.3s ease-in; }
   .litehyip-features .single-feature .part-text h3 {
-    color: #455164;
+    color: #ffffff;
     font-weight: 600;
     font-size: 24px;
-    margin-bottom: 15px; }
+    margin-bottom: 15px;
+    }
   .litehyip-features .single-feature .part-text p {
     color: #3f4b6e;
     line-height: 30px; }
@@ -722,33 +732,41 @@ ul {
     we thinking global
 ==========================================*/
 .we-thinking-global {
-  padding: 120px 0 120px; }
+  padding: 120px 0 120px;
+  background: #0f0f0f;
+  }
   .we-thinking-global .part-img img {
-    width: 100%; }
+    width: 100%;
+    border-radius: 5px;
+    }
   .we-thinking-global .part-text h2 {
-    color: #455164;
+    color: #ffffff;
     margin-bottom: 15px;
     line-height: 1.5;
-    font-weight: 700; }
+    font-weight: 700;
+    }
     .we-thinking-global .part-text h2 span {
-      color: #1add97; }
+      color: #ffa100;
+      }
   .we-thinking-global .part-text p {
-    color: #575f84;
-    line-height: 30px; }
+    color: #ffffff;
+    line-height: 30px;
+    }
   .we-thinking-global .part-text a {
     display: inline-block;
     color: #fff;
     font-weight: 600;
     font-size: 16px;
-    background: transparent;
-    border: 1px solid #1add97;
-    color: #1add97;
+    background: #ffa100;
+    border: 1px solid #95830f;
+    color: #ffffff;
     padding: 15px 51px;
     border-radius: 50px;
     margin: 18px 0 0;
     -webkit-transition: all 0.3s ease-in;
     -o-transition: all 0.3s ease-in;
-    transition: all 0.3s ease-in; }
+    transition: all 0.3s ease-in;
+    }
     .we-thinking-global .part-text a:hover {
       background: #1add97;
       color: #fff; }
@@ -838,18 +856,20 @@ ul {
 ==========================================*/
 .testimonial {
   padding: 110px 0 120px;
-  background: #fefefe; }
+  background: #0f0f0f;
+  }
   .testimonial .section-title {
     margin-bottom: 57px; }
     .testimonial .section-title h2 {
       margin-bottom: 22px; }
   .testimonial .single-testimonial {
-    background-image: -webkit-linear-gradient(bottom, #8e67f3, #6a38da);
+    background-image: -webkit-linear-gradient(bottom, #d49300, #FF9800);
     padding: 30px 30px 11px;
     border-radius: 10px;
     position: relative;
     z-index: 2;
-    border: 1px solid #fff; }
+    border: 1px solid #FF9800;
+    }
     .testimonial .single-testimonial:after {
       position: absolute;
       border-radius: 10px;
