them hinh, sua cac trang con lai

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1194,7 +1194,7 @@
     /* newsletter */
     .newsletter {
         padding: 74px 0 80px;
-        background: #6b39da;
+        background: #2f2d2d;
     }
     .newsletter .bg-img {
         display: none;
