--- a/assets/user/css/style.css
+++ b/assets/user/css/style.css
@@ -29277,6 +29277,11 @@ option {
   padding: 5px;
   border-radius: 5px;
 }
+.img_qr{
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+}
 /*-------------------------------------------------------------------*/
 /* === Layouts === */
 /*-------------------------------------------------------------------*/
